--- a/blog-web/src/main/resources/application.properties
+++ b/blog-web/src/main/resources/application.properties
@@ -14,5 +14,8 @@
 #spring.devtools.restart.exclude=target/classes/upload,static/img,src/test,upload
 #spring.devtools.restart.additional-exclude=target/**,static/img,src/test,upload
 #org.springframework.http.converter.StringHttpMessageConverter.supportedMediaTypes=text/plain;charset=UTF-8
+#restart.exclude.companycommonlibs=/gc-shop-[\\w-]+\.jar
 
-restart.exclude.companycommonlibs=/gc-shop-[\\w-]+\.jar
+
+# location of the swagger json
+springfox.documentation.swagger.v2.path=/swagger.json
