--- a/blog-web/pom.xml
+++ b/blog-web/pom.xml
@@ -14,7 +14,7 @@
     <groupId>com.light</groupId>
     <artifactId>blog-web</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <packaging>war</packaging>
+    <packaging>jar</packaging>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
