--- a/.travis.yml
+++ b/.travis.yml
@@ -18,10 +18,10 @@ git:
 
 before_install:
   - git submodule update --init --recursive --remote
-  - openssl aes-256-cbc -K $aes_key -iv $aes_iv -in id_rsa_light.enc -out id_rsa_light -d
+  - openssl enc -aes-256-cbc -in deploy/id_rsa_light.enc -out id_rsa_light -K $aes_key -iv $aes_iv -d
   - chmod u=r,og-rwx id_rsa_light
 
-install: mvn clean install -U -P pro -V -Dmaven.javadoc.skip=true -DskipTests=true
+install: mvn clean install -U -P pro -V -Dmaven.javadoc.skip=true -DskipTests=true --quiet
 
 deploy:
   provider: script
