--- a/blog-web/src/main/resources/application-dev.yaml
+++ b/blog-web/src/main/resources/application-dev.yaml
@@ -4,7 +4,9 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/blog?useSSL=false&useUnicode=true&characterEncoding=UTF-8&allowPublicKeyRetrieval=true
     username: root
-    password: root
+    password: ${MYSQL_BLOG_PWD}
+
+#test: @MYSQL_BLOG_PWD@
 
 app:
   url: http://gc-dev.light0x00.com:8082
