--- a/pom.xml
+++ b/pom.xml
@@ -87,6 +87,11 @@
                 <version>6.5.0</version>
             </dependency>
 
+            <dependency>
+                <groupId>com.alibaba</groupId>
+                <artifactId>fastjson</artifactId>
+                <version>1.2.17</version>
+            </dependency>
 
         </dependencies>
 
