--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,12 @@
             </dependency>
 
             <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-context-support</artifactId>
+                <version>5.0.8.RELEASE</version>
+            </dependency>
+
+            <dependency>
                 <groupId>com.baomidou</groupId>
                 <artifactId>mybatis-plus-boot-starter</artifactId>
                 <version>3.0.1</version>
@@ -92,6 +98,14 @@
                 <artifactId>fastjson</artifactId>
                 <version>1.2.31</version>
             </dependency>
+
+            <dependency>
+                <groupId>javax.mail</groupId>
+                <artifactId>mail</artifactId>
+                <version>1.4.7</version>
+            </dependency>
+
+
 
         </dependencies>
 
