--- a/blog-web/src/main/resources/application-dev.yaml
+++ b/blog-web/src/main/resources/application-dev.yaml
@@ -1,5 +1,7 @@
 # 热重启开关
 spring:
+  application:
+    name: blog-api
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/blog?useSSL=false&useUnicode=true&characterEncoding=UTF-8&allowPublicKeyRetrieval=true
